--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "react-form-builder2",
+  "name": "react-form-builder-arc",
   "version": "0.8.7",
   "description": "A complete form builder for react.",
   "main": "lib/index.js",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kiho/react-form-builder.git"
+    "url": "git+https://github.com/kizzbonez/react-form-builder.git"
   },
   "files": [
     "lib",
